Update .env.example with example MongoDB URI and port values.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,1 @@
-# .env.example
-
-# Telegram Bot Token
-TELEGRAM_BOT_TOKEN=
-
-# MongoDB URI
-MONGODB_URI=
-
-# Port for the application
-PORT=
-
-# Webhook URL
-WEBHOOK_URL=
+MONGODB_URI=mongodb://localhost:27017/mydatabase\n
